Fix page section spacing issues

--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -1,6 +1,7 @@
 @import '../variables.scss';
 
 #header {
+  z-index: 1000;
   display: flex;
   position: absolute;
   left: 0;
