--- a/styles/components/PageSection.module.scss
+++ b/styles/components/PageSection.module.scss
@@ -2,7 +2,16 @@
 
 #pageSection {
   margin-bottom: 5em;
-  padding : 0 1em;
+  padding : 0 .5em;
+
+  &.fullHeight {
+    margin-bottom: 0;
+    height: 100%;
+  }
+
+  @media screen and (min-width: $screen-sm) {
+    padding: 0 2.5em;
+  }
 
   @media screen and (min-width: $screen-lg) {
     padding: 0 4em;
