--- a/styles/components/SocialBar.module.scss
+++ b/styles/components/SocialBar.module.scss
@@ -3,7 +3,7 @@
 .socialBar {
   position: absolute;
   width: 2.5em;
-  right: 25px;
+  right: .5vw;
   bottom: 0;
   display: flex;
   flex-direction: column;
