--- a/styles/pages/contact.scss
+++ b/styles/pages/contact.scss
@@ -10,7 +10,7 @@
   height: 100%;
   max-width: 1200px;
   margin: auto;
-  padding: 2em;
+  padding: 2em 1em;
 
   @media screen and (min-width: $screen-lg) {
     padding: 0 4em;
